# design

./: .gitignore  DATABASE_TABLES.md  RUN_DESIGNKP.bat  RUN_DESIGNKP.bat.codex-backup  door.glb  pack_context.py  package-lock.json  witch main
2d/: New Text Document.txt  (+6 more)
backend/: ORDER_DESIGN_INTERIOR_REVIEW.md  README.md  alembic.ini  pyproject.toml  sitecustomize.py
backend/alembic/: env.py
backend/alembic/versions/: 20260315_0001_bootstrap_postgres_foundation.py  20260315_0002_create_account_tables.py  20260315_0003_create_orders_table.py  20260315_0004_create_part_kinds_table.py  20260315_0005_align_part_kinds_with_business_naming.py  20260315_0006_fix_order_tenant_integrity_and_part_kind_admin_naming.py  20260315_0007_seed_demo_admin_for_ui.py  20260315_0008_create_param_groups_table.py  20260315_0009_align_param_groups_seed_data_with_excel.py  20260315_0010_create_params_table.py  (+63 more)
backend/designkp_backend/: __init__.py
backend/tests/: test_admin_storage_part_models.py  test_admin_storage_service_types.py  test_base_formulas.py  test_box_boolean_engine.py  test_categories.py  test_config.py  test_door_part_groups.py  test_formula_validation.py  test_interior_instance_flow_review.py  test_internal_part_groups.py  test_order_design_snapshot_meta.py  test_part_formulas.py  test_part_kinds.py  test_part_models.py  test_part_services.py  test_service_types.py  test_sub_categories.py  test_sub_category_deletes.py  test_sub_category_door_controller_preview.py  test_sub_category_interior_preview.py  test_subtractor_boolean_preview.py  test_subtractor_part_groups.py
(+94 files in other folders)
