[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "designkp-backend"
version = "0.1.0"
description = "Database foundation for DesignKP cabinet data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "pillow>=11.1,<12.0",
  "pydantic-settings>=2.4,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0.36,<3.0",
  "uvicorn>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
